--- a/mystore/Gemfile
+++ b/mystore/Gemfile
@@ -3,8 +3,8 @@ source 'https://rubygems.org'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.6'
-# Use sqlite3 as the database for Active Record
-gem 'sqlite3'
+
+
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
@@ -31,6 +31,9 @@ gem 'spree_gateway', '~> 3.1.0'
 # Spree DROP SHIP
 gem 'spree_drop_ship', github: 'spree-contrib/spree_drop_ship'
 
+# Spree MARKETPLACE
+# gem 'spree_marketplace', github: 'jdutil/spree_marketplace'
+
 
 
 # Use ActiveModel has_secure_password
@@ -42,10 +45,6 @@ gem 'spree_drop_ship', github: 'spree-contrib/spree_drop_ship'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
-group :development, :test do
-  # Call 'byebug' anywhere in the code to stop execution and get a debugger console
-  gem 'byebug'
-end
 
 group :development do
   # Access an IRB console on exception pages or by using <%= console %> in views
@@ -55,3 +54,19 @@ group :development do
   gem 'spring'
 end
 
+
+
+group :development, :test do
+# Use sqlite3 as the database for Active Record
+  gem 'sqlite3' 
+  # gem 'sqlite3', '1.3.11'
+
+  # Call 'byebug' anywhere in the code to stop execution and get a debugger console
+  gem 'byebug'
+end
+
+
+
+group :production do
+  gem 'pg', '0.18.4'
+end
